src/style/core.css
/* ... */
.z-window.z-minimized .z-window-header {
    -moz-border-radius: 3px;
    -webkit-border-radius: 3px;
    border-radius: 3px;
    position: static;
}

.z-window.z-minimized .z-window-body,
.z-window.z-minimized .z-window-footer,
.z-window.z-minimized .resizable_handle,
.z-window.z-maximized .resizable_handle {
    display: none;
}

.z-window .z-window-header,
.z-window .z-window-footer {
    position: absolute;
    left: 0;
    right: 0;
}

.z-window .z-window-header {
    top: 0;
}

.z-window .z-window-footer {
    bottom: 0;
}

.z-window .z-window-body {
    top: 26px;
    bottom: 26px;
    left: 0;
    right: 0;
}

.z-window.z-dialog .z-window-body {
    bottom: 35px;
}

.z-window-indicator {
    background: #fff url(../images/ajax/large_square_white.gif) no-repeat 50% 50%;
    opacity: 0.8;
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    z-index: 9999;
}

.z-alert .z-window-header {
    color: #F2503E;
}

.z-confirm .z-window-header {
    color: #EDE54E;
}

#control_overlay {
    background-color: #000;
}

/******************************************************************************
* Zikula.UI - SelectMultiple
*******************************************************************************/

.z-select-multiple.z-form {
    padding: 0;
    margin: 0;
}

.z-select-multiple.z-form .z-formrow {
    margin: 2px 0;
    padding: 0;
}

.z-select-multiple.z-form .z-formrow.selected {
    background: #DCDCDC;
}

.z-select-multiple.z-form div.z-formrow label {
    width: 49%;
}

/******************************************************************************
* Zikula.UI - Tabs
*******************************************************************************/

.z-tabs {
    background: url("../images/ui/tab_bottom.png") repeat-x scroll center bottom transparent;
    margin:0 !important;
    padding:0 !important;
    width: 100%;
    overflow: hidden;
}

.z-tabs li {
    background-color: #F3F3F3;
    border: 1px solid #ccc;
    float: left;
    list-style-type: none;
    margin: 0 5px 0 0;
    padding: 0;
    z-index: 1000;
}

.z-tabs li > a {
    border-right: 1px solid transparent;
    color: #666666;
    float: left;
    font-weight: bold;
    outline: 0; /* remove Firefox border */
    padding: 5px;
    position: relative;
    text-decoration: none;
}

.z-tabs li > a:hover,
.z-tabs li > a.hover {
    background: #e3e3e3 !important;
    color: #000;
    text-decoration: none;
}

.z-tabs li.active {
    background: none repeat scroll 0 0 #fff;
    border-bottom: 1px solid #fff;
    z-index: 2000;
}

.z-tabs li.active a:hover,
.z-tabs li.active a.hover {
    background-color: #fff !important;
    border-right: 1px solid transparent;
}

.z-tabs-content {
    background: none repeat scroll 0 0 #fff;
    border: 1px solid #ccc;
    border-top: none;
    padding: 5px;
}

/******************************************************************************
* Accordion, Panels
*******************************************************************************/

.z-accordion .z-acc-header,
.z-panels .z-panel-header {
    -webkit-border-radius: 3px;
    -moz-border-radius: 3px;
    border-radius: 3px;
    background: url("../images/global/menubg_grey.png") repeat-x scroll 0 0 #dfdfdf; /*non-CSS3 browsers*/
    background: -webkit-gradient(linear, left top, left bottom, from(#ffffff), to(#dfdfdf)); /*webkit*/
    background: -moz-linear-gradient(top, #ffffff, #dfdfdf); /*gecko*/
    background: linear-gradient(#FFFFFF, #dfdfdf); /*CSS3*/
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#FFFFFF', endColorstr='#dfdfdf'); /*IE*/
    border: 1px solid #CCCCCC;
    cursor: pointer;
    margin: 0.2em 0 0;
    padding: 0.5em !important;
    display: block;
}

.z-accordion .z-acc-header:hover,
.z-accordion .z-acc-header.hover,
.z-panels .z-panel-header:hover,
.z-panels .z-panel-header.hover {
    background: #cfcfcf; /*non-CSS3 browsers*/
    background: -webkit-gradient(linear, left top, left bottom, from(#fafafa), to(#cfcfcf)); /*webkit*/
    background: -moz-linear-gradient(top, #fafafa, #cfcfcf); /*gecko*/
    background: linear-gradient(#fafafa, #cfcfcf); /*CSS3*/
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fafafa', endColorstr='#CFCFCF'); /*IE*/
}

.z-accordion .z-acc-content,
.z-panels .z-panel-content {
    -webkit-border-radius: 0 0 3px 3px;
    -moz-border-radius: 0 0 3px 3px;
    border-radius: 0 0 3px 3px;
    background: #fafafa;
    border: 1px solid #ccc;
    border-top: none;
    margin: 0 0 0.2em 0;
    padding: 0.5em;
}

.z-accordion .z-acc-header.z-acc-active,
.z-panels .z-panel-header.z-panel-active {
    -webkit-border-radius: 3px 3px 0 0;
    -moz-border-radius: 3px 3px 0 0;
    border-radius: 3px 3px 0 0;
    background: #CFCFCF; /*non-CSS3 browsers*/
    background: -webkit-gradient(linear,left top, left bottom,from(#fafafa),to(#CFCFCF)); /*webkit*/
    background: -moz-linear-gradient(top, #fafafa, #CFCFCF); /*gecko*/
    background: linear-gradient(#fafafa, #CFCFCF); /*CSS3*/
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fafafa', endColorstr='#CFCFCF'); /*IE*/
}


/******************************************************************************
* Order styles
*******************************************************************************/

.z-order-asc {
    background: url("../images/global/arrow_up_grey.png") transparent 100% 50% no-repeat;
    padding-right: 12px;
}
.z-order-asc:hover,
.z-order-asc.hover {
    background: url("../images/global/arrow_up_black.png") transparent 100% 50% no-repeat;
}
.z-order-desc {
    background: url("../images/global/arrow_down_grey.png") transparent 100% 50% no-repeat;
    padding-right: 12px;
}
.z-order-desc:hover,
.z-order-desc.hover {
    background: url("../images/global/arrow_down_black.png") transparent 100% 50% no-repeat;
}
.z-order-unsorted {
    padding-right: 12px;
}
/* ... */

